Updated .lang files
invisibility_cap -> vanish_cap

--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -85,7 +85,7 @@ item.cappy.name=ʎddɐƆ
 item.luigi_cap.name=<newline>
 item.wario_cap.name=<newline>
 item.waluigi_cap.name=<newline>
-item.invisibility_cap.name=<newline>
+item.vanish_cap.name=<newline>
 item.wing_cap.name=<newline>
 item.princess_peach_crown.name=<newline>
 item.princess_daisy_crown.name=<newline>
