--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -85,7 +85,7 @@ item.cappy.name=Cappy
 item.luigi_cap.name=Gorra de Luigi
 item.wario_cap.name=Gorra de Wario
 item.waluigi_cap.name=Gorra de Waluigi
-item.invisibility_cap.name=Gorra de invisibilidad
+item.vanish_cap.name=Gorra de invisibilidad
 item.wing_cap.name=Wing cap
 item.princess_peach_crown.name=Corona de la Princesa Peach
 item.princess_daisy_crown.name=Corona de la Princesa Daisy
