--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -85,7 +85,7 @@ item.cappy.name=Cappy
 item.luigi_cap.name=Casquette de Luigi
 item.wario_cap.name=Casquette de Wario
 item.waluigi_cap.name=Casquette de Waluigi
-item.invisibility_cap.name=Casquette de disparition
+item.vanish_cap.name=Casquette de disparition
 item.wing_cap.name=Casquette ailée
 item.princess_peach_crown.name=Couronne de la Princesse Peach
 item.princess_daisy_crown.name=Couronne de la Princesse Daisy
