--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -85,7 +85,7 @@ item.cappy.name=capy da hat
 item.luigi_cap.name=looigi hat
 item.wario_cap.name=wori hat
 item.waluigi_cap.name=walogi hat
-item.invisibility_cap.name=vanis hat
+item.vanish_cap.name=vanis hat
 item.wing_cap.name=fly hat
 item.princess_peach_crown.name=peech cron
 item.princess_daisy_crown.name=disi  cron
