--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -85,7 +85,7 @@ item.cappy.name=Cappy
 item.luigi_cap.name=Luigi's Cap
 item.wario_cap.name=Wario's Cap
 item.waluigi_cap.name=Waluigi's Cap
-item.invisibility_cap.name=Invisibility Cap
+item.vanish_cap.name=Invisibility Cap
 item.wing_cap.name=Wing Cap
 item.princess_peach_crown.name=Princess Peach's Crown
 item.princess_daisy_crown.name=Princess Daisy's Crown
