Updated .lang files

--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -73,6 +73,7 @@ item.crepe.name=Crêpe
 item.chocolate_crepe.name=Chocolate Crêpe
 item.caramel_crepe.name=Caramel Crêpe
 item.candy_cane.name=<newline>
+item.bandage.name=<newline>
 
 item.super_mushroom.name=Super Mushroom
 item.peach.name=Peach
