--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -73,6 +73,7 @@ item.crepe.name=ǝdǝɹƆ
 item.chocolate_crepe.name=ǝdǝɹƆ ǝʇɐloɔoɥƆ
 item.caramel_crepe.name=ǝdǝɹƆ lǝɯɐɹɐƆ
 item.candy_cane.name=<newline>
+item.bandage.name=<newline>
 
 item.super_mushroom.name=ɯooɹɥsnW ɹǝdnS
 item.peach.name=ɥɔɐǝԀ
