--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -73,6 +73,7 @@ item.crepe.name=Crêpe
 item.chocolate_crepe.name=Crêpe au chocolat
 item.caramel_crepe.name=Crêpe au caramel
 item.candy_cane.name=Sucre d'orge
+item.bandage.name=Bandage
 
 item.super_mushroom.name=Super champignon
 item.peach.name=Pêche
