--- a/resources/assets/mubble/lang/io.lang
+++ b/resources/assets/mubble/lang/io.lang
@@ -73,6 +73,7 @@ item.crepe.name=Krepo
 item.chocolate_crepe.name=Krepo di chokolado
 item.caramel_crepe.name=Krepo di karamelo
 item.candy_cane.name=<newline>
+item.bandage.name=<newline>
 
 item.super_mushroom.name=Champiniono figuranto
 item.peach.name=Persiko
