--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -73,6 +73,7 @@ item.crepe.name=creeepe
 item.chocolate_crepe.name=crepe + choco
 item.caramel_crepe.name=crepe + caraml good
 item.candy_cane.name=christmas cane
+item.bandage.name=banaj
 
 item.super_mushroom.name=SUPA MUSH
 item.peach.name=salty peesh very gud
