--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -73,6 +73,7 @@ item.crepe.name=Crêpe
 item.chocolate_crepe.name=Chocolade crêpe
 item.caramel_crepe.name=Karamel crêpe
 item.candy_cane.name=<newline>
+item.bandage.name=<newline>
 
 item.super_mushroom.name=Super paddenstoel
 item.peach.name=Perzik
