--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -73,6 +73,7 @@ item.crepe.name=Crepe
 item.chocolate_crepe.name=Crepe de chocolate
 item.caramel_crepe.name=Crepe de caramelo
 item.candy_cane.name=Bastón de caramelo
+item.bandage.name=<newline>
 
 item.super_mushroom.name=Súper champiñón
 item.peach.name=Durazno
