--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -73,6 +73,7 @@ item.crepe.name=可丽饼
 item.chocolate_crepe.name=巧克力可丽饼
 item.caramel_crepe.name=焦糖可丽饼
 item.candy_cane.name=<newline>
+item.bandage.name=<newline>
 
 item.super_mushroom.name=超级蘑菇
 item.peach.name=桃子
