Improved Gooigi Cap

--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=dɐƆ s,oᴉɹɐM
 item.waluigi_cap.name=dɐƆ s,ᴉƃᴉnlɐM
 item.vanish_cap.name=dɐƆ ɥsᴉuɐΛ
 item.wing_cap.name=dɐƆ ƃuᴉM
+item.gooigi_cap.name=dɐƆ s,ᴉƃᴉooפ
 item.princess_peach_crown.name=uʍoɹƆ s,ɥɔɐǝԀ ssǝɔuᴉɹԀ
 item.princess_daisy_crown.name=uʍoɹƆ s,ʎsᴉɐp ssǝɔuᴉɹԀ
 item.super_crown.name=uʍoɹƆ ɹǝdnS
