--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=Casquette de Wario
 item.waluigi_cap.name=Casquette de Waluigi
 item.vanish_cap.name=Casquette de disparition
 item.wing_cap.name=Casquette ailée
+item.gooigi_cap.name=Casquette de Gooigi
 item.princess_peach_crown.name=Couronne de la Princesse Peach
 item.princess_daisy_crown.name=Couronne de la Princesse Daisy
 item.super_crown.name=Super couronne
