--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=wori hat
 item.waluigi_cap.name=walogi hat
 item.vanish_cap.name=vanis hat
 item.wing_cap.name=fly hat
+item.gooigi_cap.name=googy hat
 item.princess_peach_crown.name=peech cron
 item.princess_daisy_crown.name=disi  cron
 item.super_crown.name=waifu creator
