--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=Wario's pet
 item.waluigi_cap.name=Waluigi's pet
 item.vanish_cap.name=Verdwijn pet
 item.wing_cap.name=Vleugel pet
+item.gooigi_cap.name=Gooigi's pet
 item.princess_peach_crown.name=Prinses Peach's kroon
 item.princess_daisy_crown.name=Prinses Daisy's kroon
 item.super_crown.name=Superkroon
