--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=Wario's Cap
 item.waluigi_cap.name=Waluigi's Cap
 item.vanish_cap.name=Vanish Cap
 item.wing_cap.name=Wing Cap
+item.gooigi_cap.name=Gooigi's Cap
 item.princess_peach_crown.name=Princess Peach's Crown
 item.princess_daisy_crown.name=Princess Daisy's Crown
 item.super_crown.name=Super Crown
