--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=Gorra de Wario
 item.waluigi_cap.name=Gorra de Waluigi
 item.vanish_cap.name=Gorra de invisibilidad
 item.wing_cap.name=Wing cap
+item.gooigi_cap.name=Gorra de Gooigi
 item.princess_peach_crown.name=Corona de la Princesa Peach
 item.princess_daisy_crown.name=Corona de la Princesa Daisy
 item.super_crown.name=Supercorona
