--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -88,6 +88,7 @@ item.wario_cap.name=<newline>
 item.waluigi_cap.name=<newline>
 item.vanish_cap.name=<newline>
 item.wing_cap.name=<newline>
+item.gooigi_cap.name=<newline>
 item.princess_peach_crown.name=<newline>
 item.princess_daisy_crown.name=<newline>
 item.super_crown.name=<newline>
