--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -128,6 +128,12 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=Un tout nouveau voyage
 advancements.mubble.get_coin.title=C'est à moi ! De l'or !
 advancements.mubble.get_coin.description=Trouvez des pièces
+advancements.mubble.get_super_crown.title=Le traitement deluxe
+advancements.mubble.get_super_crown.description=Trouvez une super couronne
+advancements.mubble.get_bandage.title=Récupération
+advancements.mubble.get_bandage.description=Obtenez un bandage
+advancements.mubble.get_all_caps.title=Super-Stars
+advancements.mubble.get_all_caps.description=Fabriquez toutes les casquettes
 advancements.mubble.get_vanadium.title=Du vanadium !
 advancements.mubble.get_vanadium.description=Obtenez du vanadium
 advancements.mubble.get_tetris_block.title=Connectés à travers l'espace
