--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -128,6 +128,12 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=Een grandioos nieuw avontuur
 advancements.mubble.get_coin.title=Het is van mij! Goud!
 advancements.mubble.get_coin.description=Vind munten
+advancements.mubble.get_super_crown.title=<newline>
+advancements.mubble.get_super_crown.description=<newline>
+advancements.mubble.get_bandage.title=<newline>
+advancements.mubble.get_bandage.description=<newline>
+advancements.mubble.get_all_caps.title=<newline>
+advancements.mubble.get_all_caps.description=<newline>
 advancements.mubble.get_vanadium.title=Vanadiums!
 advancements.mubble.get_vanadium.description=Verkrijg vanadiums
 advancements.mubble.get_tetris_block.title=Het is allemaal verbonden
