--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -128,6 +128,12 @@ advancements.mubble.root.title=ǝlqqnW
 advancements.mubble.root.description=ʎǝuɹnoɾ ʍǝu puɐɹƃ ∀
 advancements.mubble.get_coin.title=¡ploפ ¡ǝuᴉɯ s,ʇI
 advancements.mubble.get_coin.description=suᴉoɔ puᴉℲ
+advancements.mubble.get_super_crown.title=ʇuǝɯʇɐǝɹ┴ ǝxnlǝp ǝɥ┴
+advancements.mubble.get_super_crown.description=uʍoɹƆ ɹǝdnS ɐ puᴉℲ
+advancements.mubble.get_bandage.title=ʎɹǝʌoɔǝɹ
+advancements.mubble.get_bandage.description=ǝƃɐpuɐq ɐ uᴉɐʇqO
+advancements.mubble.get_all_caps.title=sɹɐʇS-ɹǝdnS
+advancements.mubble.get_all_caps.description=sdɐɔ ǝɥʇ llɐ ʇɟɐɹƆ
 advancements.mubble.get_vanadium.title=¡sɯnᴉpɐuɐΛ
 advancements.mubble.get_vanadium.description=sɯnᴉpɐuɐʌ ǝɹᴉnbɔ∀
 advancements.mubble.get_tetris_block.title=pǝʇɔǝuuoƆ ll∀ s,ʇI
