--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -128,6 +128,12 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=A grand new journey
 advancements.mubble.get_coin.title=It's mine! Gold!
 advancements.mubble.get_coin.description=Find coins
+advancements.mubble.get_super_crown.title=The Deluxe Treatment
+advancements.mubble.get_super_crown.description=Find a Super Crown
+advancements.mubble.get_bandage.title=Recovery
+advancements.mubble.get_bandage.description=Obtain a bandage
+advancements.mubble.get_all_caps.title=Super-Stars
+advancements.mubble.get_all_caps.description=Craft all the caps
 advancements.mubble.get_vanadium.title=Vanadiums!
 advancements.mubble.get_vanadium.description=Acquire vanadiums
 advancements.mubble.get_tetris_block.title=It's All Connected
