--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -128,6 +128,12 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=woohoo adventur
 advancements.mubble.get_coin.title=gimme money!!1!
 advancements.mubble.get_coin.description=find zooz coinz 
+advancements.mubble.get_super_crown.title=<newline>
+advancements.mubble.get_super_crown.description=<newline>
+advancements.mubble.get_bandage.title=<newline>
+advancements.mubble.get_bandage.description=<newline>
+advancements.mubble.get_all_caps.title=<newline>
+advancements.mubble.get_all_caps.description=<newline>
 advancements.mubble.get_vanadium.title=purple in da poket
 advancements.mubble.get_vanadium.description=get da shiny purple thingy
 advancements.mubble.get_tetris_block.title=falin in th sky
