--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -128,6 +128,12 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=一次伟大崭新的旅程
 advancements.mubble.get_coin.title=宝藏是我的！
 advancements.mubble.get_coin.description=找到硬币
+advancements.mubble.get_super_crown.title=<newline>
+advancements.mubble.get_super_crown.description=<newline>
+advancements.mubble.get_bandage.title=<newline>
+advancements.mubble.get_bandage.description=<newline>
+advancements.mubble.get_all_caps.title=<newline>
+advancements.mubble.get_all_caps.description=<newline>
 advancements.mubble.get_vanadium.title=钒！
 advancements.mubble.get_vanadium.description=获得钒
 advancements.mubble.get_tetris_block.title=一切都是可以连接的
