--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -128,12 +128,12 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=Una nueva aventura
 advancements.mubble.get_coin.title=¡Es mío! ¡Oro!
 advancements.mubble.get_coin.description=Encuentra monedas
-advancements.mubble.get_super_crown.title=<newline>
-advancements.mubble.get_super_crown.description=<newline>
-advancements.mubble.get_bandage.title=<newline>
-advancements.mubble.get_bandage.description=<newline>
-advancements.mubble.get_all_caps.title=<newline>
-advancements.mubble.get_all_caps.description=<newline>
+advancements.mubble.get_super_crown.title=El Tratamiento De Lujo
+advancements.mubble.get_super_crown.description=Encuentra una Supercorona
+advancements.mubble.get_bandage.title=Recuperación
+advancements.mubble.get_bandage.description=Obtén un vendaje
+advancements.mubble.get_all_caps.title=¡Superestrellas!
+advancements.mubble.get_all_caps.description=Craftea todas las gorras
 advancements.mubble.get_vanadium.title=Vanadios!
 advancements.mubble.get_vanadium.description=Adquiere vanadios
 advancements.mubble.get_tetris_block.title=Está todo conectado
