--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -128,8 +128,8 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=Una nueva aventura
 advancements.mubble.get_coin.title=¡Es mío! ¡Oro!
 advancements.mubble.get_coin.description=Encuentra monedas
-advancements.mubble.get_super_crown.title=El Tratamiento De Lujo
-advancements.mubble.get_super_crown.description=Encuentra una Supercorona
+advancements.mubble.get_super_crown.title=El tratamiento de lujo
+advancements.mubble.get_super_crown.description=Encuentra una supercorona
 advancements.mubble.get_bandage.title=Recuperación
 advancements.mubble.get_bandage.description=Obtén un vendaje
 advancements.mubble.get_all_caps.title=¡Superestrellas!
