--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -83,9 +83,9 @@ item.yellow_coin.name=Yellow Coin
 item.red_coin.name=Red Coin
 item.blue_coin.name=Blue Coin
 item.cappy.name=Cappy
-item.luigi_cap.name=Luigi's Cap
-item.wario_cap.name=Wario's Cap
-item.waluigi_cap.name=Waluigi's Cap
+item.luigi_cap.name=Luigi Cap
+item.wario_cap.name=Wario Cap
+item.waluigi_cap.name=Waluigi Cap
 item.vanish_cap.name=Vanish Cap
 item.wing_cap.name=Wing Cap
 item.gooigi_cap.name=Gooigi's Cap
