--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -62,6 +62,7 @@ tile.blue_candy_cane_pillar.name=Pilar de bastón de caramelo azul
 tile.green_candy_cane_pillar.name=Pilar de bastón de caramelo verde
 tile.yellow_candy_cane_pillar.name=Pilar de bastón de caramelo amarillo
 tile.red_candy_cane_pillar.name=Pilar de bastón de caramelo rojo
+tile.purple_candy_cane_pillar.name=Pilar de bastón de caramelo morado
 
 tile.koretato_block.name=Bloque Koretato
 
