--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -62,6 +62,7 @@ tile.blue_candy_cane_pillar.name=Piller de sucre d'orge bleu
 tile.green_candy_cane_pillar.name=Piller de sucre d'orge vert
 tile.yellow_candy_cane_pillar.name=Piller de sucre d'orge jaune
 tile.red_candy_cane_pillar.name=Piller de sucre d'orge rouge
+tile.purple_candy_cane_pillar.name=Piller de sucre d'orge violet
 
 tile.koretato_block.name=Bloc Koretato
 
