--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -62,6 +62,7 @@ tile.blue_candy_cane_pillar.name=blue big christmas cane
 tile.green_candy_cane_pillar.name=gren big christmas cane
 tile.yellow_candy_cane_pillar.name=yelou big christmas cane
 tile.red_candy_cane_pillar.name=redd big christmas cane
+tile.purple_candy_cane_pillar.name=gay big christmas cane
 
 tile.koretato_block.name=Koretato blok
 
