--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -62,6 +62,7 @@ tile.blue_candy_cane_pillar.name=<newline>
 tile.green_candy_cane_pillar.name=<newline>
 tile.yellow_candy_cane_pillar.name=<newline>
 tile.red_candy_cane_pillar.name=<newline>
+tile.purple_candy_cane_pillar.name=<newline>
 
 tile.koretato_block.name=<newline>
 
