--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -62,6 +62,7 @@ tile.blue_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝnlᗺ
 tile.green_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ uǝǝɹפ
 tile.yellow_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ʍollǝ⅄
 tile.red_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ pǝᴚ
+tile.purple_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝldɹnԀ
 
 tile.koretato_block.name=ʞɔolq oʇɐʇǝɹoʞ
 
