--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -62,6 +62,7 @@ tile.blue_candy_cane_pillar.name=Blue Candy Cane Pillar
 tile.green_candy_cane_pillar.name=Green Candy Cane Pillar
 tile.yellow_candy_cane_pillar.name=Yellow Candy Cane Pillar
 tile.red_candy_cane_pillar.name=Red Candy Cane Pillar
+tile.purple_candy_cane_pillar.name=Purple Candy Cane Pillar
 
 tile.koretato_block.name=Koretato Block
 
