--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -43,7 +43,7 @@ tile.yellow_tetris_block.name=Yellow Tetris Block
 tile.orange_tetris_block.name=Orange Tetris Block
 tile.red_tetris_block.name=Red Tetris Block
 tile.purple_tetris_block.name=Purple Tetris Block
-tile.gray_tetris_block.name=Gray Tetris Block
+tile.gray_tetris_block.name=Grey Tetris Block
 tile.tetris_glass.name=Tetris Glass
 tile.japanese_tetris_cushion.name=Japanese Tetris Cushion
 tile.rainbow_tetris_scaffolding.name=Rainbow Tetris Scaffolding
