Updated languages files

--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -24,7 +24,7 @@ tile.note_block.name=Bloc note
 tile.super_note_block.name=Super bloc note
 tile.fire_flower.name=Fleur de feu
 tile.ice_flower.name=Fleur de glace
-tile.boomerang_flower.name=	Fleur boomerang
+tile.boomerang_flower.name=Fleur boomerang
 tile.cloud_flower.name=Fleur nuage
 tile.cloud_block.name=Bloc nuage
 tile.blue_mushroom.name=Champignon bleu
@@ -119,7 +119,7 @@ entity.chincho.name=Chincho
 subtitles.block.question_block.loot.super_mushroom=Super champignon sorti d'un bloc ?
 subtitles.block.question_block.loot.coin=Pièce sortie d'un bloc ?
 subtitles.item.cape_feather.use=Plume acrobate utilisée
-subtitles.item.smash_ball.use=Balle Smash acrobate
+subtitles.item.smash_ball.use=Balle Smash utilisée
 subtitles.entity.toad.ambient=Marmonnement de Toad
 subtitles.entity.toad.hurt=Toad blessé
 subtitles.entity.toad.death=Toad qui meurt
