--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -129,13 +129,13 @@ advancements.mubble.root.title=Mubble
 advancements.mubble.root.description=woohoo adventur
 advancements.mubble.get_coin.title=gimme money!!1!
 advancements.mubble.get_coin.description=find zooz coinz 
-advancements.mubble.get_super_crown.title=<newline>
-advancements.mubble.get_super_crown.description=<newline>
-advancements.mubble.get_bandage.title=<newline>
-advancements.mubble.get_bandage.description=<newline>
-advancements.mubble.get_all_caps.title=<newline>
-advancements.mubble.get_all_caps.description=<newline>
+advancements.mubble.get_super_crown.title=no
+advancements.mubble.get_super_crown.description=pliz dont
+advancements.mubble.get_bandage.title=when u step on hedghog
+advancements.mubble.get_bandage.description=u heal ur paw
+advancements.mubble.get_all_caps.title=its dark in there
+advancements.mubble.get_all_caps.description=i cant see remove this from my head hooman
 advancements.mubble.get_vanadium.title=purple in da poket
 advancements.mubble.get_vanadium.description=get da shiny purple thingy
 advancements.mubble.get_tetris_block.title=falin in th sky
-advancements.mubble.get_tetris_block.description=OBTAIN a titris bloks
+advancements.mubble.get_tetris_block.description=tirtris bloks fun
