--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -139,3 +139,222 @@ advancements.mubble.get_vanadium.title=je sui blinder
 advancements.mubble.get_vanadium.description=trouv du truc la qi brillai et pourpré
 advancements.mubble.get_tetris_block.title=la majie du jeu sur fb
 advancements.mubble.get_tetris_block.description=tu te souvien du jeu ou fallai construir non pa minecraft s un vieu jeu sur vielle console bah il fau un de c bloks jcroi
+
+
+
+--- VANILLA --
+addServer.add=terminai
+addServer.enterIp=ip du serv
+addServer.enterName=coman sapel le serv
+addServer.hideAddress=degager l'ip
+addServer.resourcePack=paks de rsource
+addServer.resourcePack.disabled=pas là
+addServer.resourcePack.enabled=là
+addServer.resourcePack.prompt=demande avant si il es là
+addServer.title=Modification des informations du serveur
+
+book.byAuthor=c de %1$s
+book.editTitle=prenom:
+book.finalizeButton=tu signe le contra a vie!!
+book.finalizeWarning=aprs tu peu plus le changer ahah c un contrat ossi
+book.generation.0=le vrai
+book.generation.1=plagia
+book.generation.2=plagia du game americain
+book.generation.3=eclatai
+book.pageIndicator=paj %1$s pour 1 total de %2$s
+book.signButton=signe
+build.tooHigh=tu peu pas posé plu o que %s metres
+chat.cannotSend=tss pas posibl d'envoyer dan le texte
+chat.copy=copiai
+chat.link.confirm=Voulez-vous vraiment ouvrir ce site Internet ?
+chat.link.confirmTrusted=Voulez-vous ouvrir ce lien ou le copier dans votre presse-papier ?
+chat.link.open=ouvrïr
+chat.link.warning=atention c ptetr un virus
+chat.type.admin=[%s : %s]
+chat.type.advancement.challenge=%s A GAGN2 %s
+chat.type.advancement.goal=%s a gg le truc %s
+chat.type.advancement.task=%s a fini un truc du genre %s
+chat.type.announcement=[%s] %s
+chat.type.emote=* %s %s
+chat.type.text=<%s> %s
+chat.type.text.narrate=wo %s il a di %s bordel
+
+connect.authorizing=ca te autentifcasion che pa koi
+connect.connecting=ah du ping enfin
+connect.failed=AH BON BAH FAU REBOOT LA CO MTN
+container.beacon=baliz
+container.brewing=mouchoir
+container.chest=panié
+container.chestDouble=gran panié
+container.crafting=cra ft
+container.creative=sélection des objé
+container.dispenser=distri
+container.dropper=coucou
+container.enchant=magicaliser
+container.enchant.clue=%s . . . ?
+container.enchant.lapis.many=%s les pise
+container.enchant.lapis.one=1 lapise
+container.enchant.level.many=%s xp
+container.enchant.level.one=1 xp
+container.enchant.level.requirement=tu doi avoir %s xp
+container.enderchest=panié INTERGALACTIQUE
+container.furnace=four
+container.hopper=toilete
+container.inventory=poche
+container.isLocked=%s fermer!!
+container.repair=mets un nom pouri ptdr
+container.repair.cost=donne: %1$s
+container.repair.expensive=bcp tro cher pr toi sorry le pauvre
+container.shulkerBox=cartable
+container.shulkerBox.more=+ %s
+container.spectatorCantOpen=pas possibl mn coco, fo que qlq genaire le panié
+controls.reset=0
+controls.resetAll=0 tout
+controls.title=ctrls
+
+death.attack.anvil=%1$s a éte broyer, ecrase par enclum
+death.attack.arrow=%1$s c fé choot par %2$s
+death.attack.arrow.item=%1$s c fé choot par %2$s avek %3$s
+death.attack.cactus=%1$s a aneanti son interieur en calinan un cactus mignon <3
+death.attack.cactus.player=%1$s a aneanti son interieur en calinan un cactus par ce qil echapai à %2$s <3 trop mimi
+death.attack.cramming=%1$s c fé fracaser les cote car il cest trop fai pouser
+death.attack.dragonBreath=le dragon a souffle tro for sur %1$s du coup bh il a brulai
+death.attack.drown=%1$s c pa nager mdrrr
+death.attack.drown.player=%1$s savé pa nagé bien en fuyan %2$s
+death.attack.explosion=%1$s c fé pété!!!!!!
+death.attack.explosion.player=%1$s c fé pété par %2$s!!!!
+death.attack.fall=%1$s ai tombé
+death.attack.fallingBlock=%1$s es mor ecrase par un blok
+death.attack.fireball=%1$s c fai schoot un ball de feu de %2$s
+death.attack.fireball.item=%1$s c fai schoot un ball de feu de %2$s qui avait %3$s
+death.attack.fireworks=%1$s c fai pulveriser de linterieur a cose de feu dartifesse
+death.attack.flyIntoWall=%1$s c démoli le crane en volan
+death.attack.generic=%1$s est dcd
+death.attack.hotFloor=%1$s na pas réusi le floor is lava challenge [NOFAKE]
+death.attack.hotFloor.player=%1$s na pas réusi le floor is lava challenge [NOFAKE] (defi de %2$s)
+death.attack.inFire=%1$s a brul
+death.attack.inFire.player=%1$s a brul pendan quil fighté %2$s
+death.attack.inWall=%1$s a atomiser sé organ dan un bloc
+death.attack.indirectMagic=%2$s a lance un sort a %1$s et il en es MORT
+death.attack.indirectMagic.item=%2$s a lance un sort a %1$s avec %3$s et %1$s il en es MORT
+death.attack.lava=%1$s savai nagé mai pas dan leau orange qui brul
+death.attack.lava.player=%1$s a nagé dan la lave a cauz de %2$s
+death.attack.lightningBolt=loraj a reduit %1$s en sendre
+death.attack.magic=%1$s es mor par majie
+death.attack.mob=%2$s a tue %1$s
+death.attack.onFire=%1$s e mor de feu
+death.attack.onFire.player=%1$s a brulai en fightant %2$s
+death.attack.outOfWorld=%1$s c baladé tro loin dan le vide
+death.attack.player=%1$s c fai charcuter par %2$s
+death.attack.player.item=%1$s c fai charcuter par %2$s avec %3$s
+death.attack.starve=%1$s avai plu dboufe
+death.attack.thorns=%1$s c fai piqué par larmur de %2$s
+death.attack.thrown=%1$s c fai exploser %2$s
+death.attack.thrown.item=%1$s c fai exploser par %2$s avec %3$s
+death.attack.wither=%1$s es mor daicomposer par tere
+death.fell.accident.generic=%1$s es tombe par tere
+death.fell.accident.ladder=%1$s a glisé dune echele
+death.fell.accident.vines=des lianes on craqués sou les main de %1$s
+death.fell.accident.water=%1$s a glisé de leau (wtf??)
+death.fell.assist=%1$s devai tombé à cos de %2$s
+death.fell.assist.item=%1$s devai tombé à cos de %2$s avec %3$s
+death.fell.finish=%1$s es tombé mai a survecu pui a ete acheveé par %2$s
+death.fell.finish.item=%1$s es tombé mai a survecu pui a ete acheveé par %2$s avec %3$s
+death.fell.killer=%1$s devai tombé
+deathScreen.deleteWorld=/kill monde
+deathScreen.leaveServer=partir du game XD
+deathScreen.quit.confirm=t sur de partire?
+deathScreen.respawn=révénir a la vie
+deathScreen.score=scor 
+deathScreen.spectate=Devenir spectateur
+deathScreen.title=t mor ptdr
+deathScreen.title.hardcore=FIN DE DE LA PARTI pr toi
+deathScreen.titleScreen=menu du daibu
+
+disconnect.closed=pu de co
+disconnect.disconnected=le serv ta déco (pas un kick)
+disconnect.endOfStream=ripe le flux du serv (jsp c koi......)
+disconnect.genericReason=%s (bien fait)
+disconnect.kicked=OH SAL MOCH TA ETE KICK MDRRRRRRR
+disconnect.loginFailed=tu peu pas te co au serv dsl
+disconnect.loginFailedInfo=tu peux pas te co au serv CAR : %s
+disconnect.loginFailedInfo.invalidSession=bug chiant t obligé de relancé le jeu sorry (tu peu pas join de servs sinon)
+disconnect.loginFailedInfo.serversUnavailable=MOJANG A DECIDE DE FAIR DES MAINTENANSES PILE QUAN TU VEUX JOUER CHEH
+disconnect.lost=crash de co
+disconnect.overflow="memoir tampon insuffisante" (c quoi ?)
+disconnect.quitting=le serv ferme
+disconnect.spam=aret de spam ou your gonna have bad time
+disconnect.timeout=ca fai tro longtemp que sa se co donc rip
+effect.absorption=+PV
+effect.blindness=-vizion
+effect.confusion=vomito time!!
+effect.damageBoost=+atak
+effect.digSlowDown=-creusaje
+effect.digSpeed=+creusaje
+effect.fireResistance=waterproof de lave
+effect.glowing=+lumièr
+effect.harm=-PV instant
+effect.heal=+PV instant
+effect.healthBoost=+HP
+effect.hunger=+miam
+effect.invisibility=pu la
+effect.jump=+sot
+effect.levitation=vol
+effect.luck=+luk
+effect.moveSlowdown=-vitese
+effect.moveSpeed=+vitese
+effect.nightVision=+vizion
+effect.none=rien
+effect.poison=pwazon
+effect.regeneration=regen
+effect.resistance=-degat resu
+effect.saturation=-miam
+effect.unluck=-luck
+effect.waterBreathing=respirasion de poisson
+effect.weakness=-atak
+effect.wither=decomposition interieur
+
+gui.advancements=achivmants
+gui.all=tou
+gui.back=arrier
+gui.cancel=stop
+gui.done=termineee
+gui.down=bas
+gui.no=nn
+gui.none=rien
+gui.recipebook.moreRecipes=clic droi = +
+gui.recipebook.toggleRecipes.all=tou les craft
+gui.recipebook.toggleRecipes.craftable=craft qtu peu fair
+gui.stats=stats
+gui.toMenu=retour au servs
+gui.toTitle=retour au menu du debu
+gui.up=ho
+gui.yes=ui
+
+language.code=fr_fe
+language.name=Frensé
+language.region=Frense
+
+menu.convertingLevel=convertion monde
+menu.disconnect=deco
+menu.game=menu débu
+menu.generatingLevel=gene du mond
+menu.generatingTerrain=gene du terain, du landscape des colines des arbes et tou omg
+menu.loadingLevel=monde entrain de charj
+menu.multiplayer=avec de jens
+menu.online=mc realm
+menu.options=optio
+menu.playdemo=jouer démo
+menu.quit=a+
+menu.resetdemo=Réinitialiser le monde de démo
+menu.respawning=!> revenir dan le game! <!
+menu.returnToGame=!> reco dan le game! <!
+menu.returnToMenu=quiter + sauv la game ;)
+menu.shareToLan=invit t potes
+menu.singleplayer=tt seul
+
+recipe.toast.description=voir le bouqin dan la poche
+recipe.toast.title=new craftes!!
+
+title.oldgl1=carte graphiqu nulle
+title.oldgl2=faudra OpenGL 2.0 plu tar
