--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -151,7 +151,7 @@ addServer.resourcePack=paks de rsource
 addServer.resourcePack.disabled=pas là
 addServer.resourcePack.enabled=là
 addServer.resourcePack.prompt=demande avant si il es là
-addServer.title=Modification des informations du serveur
+addServer.title=modif des info du serv
 
 book.byAuthor=c de %1$s
 book.editTitle=prenom:
@@ -352,6 +352,116 @@ menu.returnToGame=!> reco dan le game! <!
 menu.returnToMenu=quiter + sauv la game ;)
 menu.shareToLan=invit t potes
 menu.singleplayer=tt seul
+
+options.anaglyph=4D
+options.ao=lumièr clase
+options.ao.max=max
+options.ao.min=mini
+options.ao.off=desac
+options.attack.crosshair=pointer
+options.attack.hotbar=bar
+options.attackIndicator=couldon
+options.autoJump=jump auto chiant
+options.chat.color=colorz
+options.chat.height.focused=tail avec voir
+options.chat.height.unfocused=tail sans voir
+options.chat.links=lien virus
+options.chat.links.prompt=antivirus
+options.chat.opacity=vizio
+options.chat.scale=taile
+options.chat.title=optio discu...
+options.chat.visibility=chat
+options.chat.visibility.full=la
+options.chat.visibility.hidden=pas la
+options.chat.visibility.system=qu system
+options.chat.width=larg. 
+options.chunks=%s chunk
+options.clouds.fancy=noice
+options.clouds.fast=flash
+options.controls=ctrl...
+options.customizeTitle=optio du mond
+options.difficulty=niveau 
+options.difficulty.easy=fastoch
+options.difficulty.hard=dur
+options.difficulty.hardcore=pro omega
+options.difficulty.normal=basic
+options.difficulty.peaceful=tapett
+options.entityShadows=ombr 
+options.forceUnicodeFont=text degeulasse
+options.fov=vizio 
+options.fov.max=formul1
+options.fov.min=basic
+options.framerate=%s giga hertz
+options.framerateLimit=giga hertz max
+options.framerateLimit.max=UNLIMITAID RAM!!
+options.fullscreen=tou le pc
+options.gamma=lumièr 
+options.gamma.max=jour
+options.gamma.min=nuit
+options.graphics=grphism 
+options.graphics.fancy=noice
+options.graphics.fast=flash
+options.guiScale=tay gui
+options.guiScale.auto=oto
+options.guiScale.large=GRAND
+options.guiScale.normal=basik
+options.guiScale.small=ptit
+options.hidden=pas la
+options.invertMouse=invers souri
+options.language=lanG...
+options.languageWarning=la traduc de ce languaj est incomplète!
+options.mainHand=main de baz 
+options.mainHand.left=gauch
+options.mainHand.right=droit
+options.mipmapLevels=detailement 
+options.modelPart.cape=super man 
+options.modelPart.hat=chapo
+options.modelPart.jacket=manto
+options.modelPart.left_pants_leg=jamb gauch
+options.modelPart.left_sleeve=manch gauch
+options.modelPart.right_pants_leg=jamb drit
+options.modelPart.right_sleeve=manch drot
+options.multiplayer.title=optio onlin...
+options.music=musik 
+options.narrator=nrrteur 
+options.narrator.all=TOUT!
+options.narrator.chat=chat
+options.narrator.notavailable=en maintnanc mdr
+options.narrator.off=nn
+options.narrator.system=truk compliqués
+options.off=nn
+options.on=ui
+options.particles=prticul 
+options.particles.all=TOUT SAL MOCH
+options.particles.decreased=moins
+options.particles.minimal=presqu r
+options.realmsNotifications=notif realmz
+options.reducedDebugInfo=nerf F3
+options.renderClouds=NUAJ! 
+options.renderDistance=nmbr. de chunkz
+options.resourcepack=pak dresourc...
+options.saturation=contra st 
+options.sensitivity=sensibilte
+options.sensitivity.max=flash
+options.sensitivity.min=papi
+options.showSubtitles=souttirtes
+options.skinCustomisation=perso skin..
+options.skinCustomisation.title=perso skin
+options.snooper=pirataj
+options.snooper.desc=on veu te pirater!!!!! di oui stp
+options.snooper.title=envoi te mdps!!1111
+options.snooper.view=te pirater...
+options.sound=éfai sonors
+options.sounds=odio...
+options.sounds.title=optio odio
+options.title=optio
+options.touchscreen=cran taticle
+options.vbo=avoir lai VBO
+options.video=grafisms...
+options.videoTitle=grafisms
+options.viewBobbing=danser de tete
+options.visible=vizibl
+options.vsync=Synchro verticale
 
 recipe.toast.description=voir le bouqin dan la poche
 recipe.toast.title=new craftes!!
