--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -83,7 +83,7 @@ item.super_star.name=Super Stern
 item.yellow_coin.name=Gelbe Münze
 item.red_coin.name=Rote Münze
 item.blue_coin.name=Blaue Münze
-item.cappy.name=Mütze
+item.cappy.name=Cappy
 item.luigi_cap.name=Luigi-Mütze
 item.wario_cap.name=Wario-Mütze
 item.waluigi_cap.name=Waluigi-Mütze
