Added Pink Gold Peach's Crown

--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=dɐƆ ƃuᴉM
 item.gooigi_cap.name=dɐƆ s,ᴉƃᴉooפ
 item.princess_peach_crown.name=uʍoɹƆ s,ɥɔɐǝԀ ssǝɔuᴉɹԀ
 item.princess_daisy_crown.name=uʍoɹƆ s,ʎsᴉɐp ssǝɔuᴉɹԀ
+item.pink_gold_peach_crown.name=uʍoɹƆ s,ɥɔɐǝԀ ploפ ʞuᴉԀ
 item.super_crown.name=uʍoɹƆ ɹǝdnS
 
 item.bandana.name=ɐuɐpuɐᗺ
