--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=caskette ailé
 item.gooigi_cap.name=casett de goiii lo!l c du slim block en fait??!
 item.princess_peach_crown.name=couron disi
 item.princess_daisy_crown.name=couraun peeach
+item.pink_gold_peach_crown.name=couraun pech ros dorai
 item.super_crown.name=couraune bien supair coule. 
 
 item.bandana.name=banade
