--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=fly hat
 item.gooigi_cap.name=googy hat
 item.princess_peach_crown.name=peech cron
 item.princess_daisy_crown.name=disi  cron
+item.pink_gold_peach_crown.name=pingol peech cron
 item.super_crown.name=waifu creator
 
 item.bandana.name=banana
