--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=Vleugel pet
 item.gooigi_cap.name=Gooigi's pet
 item.princess_peach_crown.name=Prinses Peach's kroon
 item.princess_daisy_crown.name=Prinses Daisy's kroon
+item.pink_gold_peach_crown.name=Rozegouden Peach's kroon
 item.super_crown.name=Superkroon
 
 item.bandana.name=Bandana
