--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=Wing-Mütze
 item.gooigi_cap.name=Gooigi's Mütze
 item.princess_peach_crown.name=Prinzessin Peach's Krone
 item.princess_daisy_crown.name=Prinzessin Daisy's Krone
+item.pink_gold_peach_crown.name=Rosagold-Peach's Krone
 item.super_crown.name=Super Krone
 
 item.bandana.name=Kopftuch
