--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=Wing Cap
 item.gooigi_cap.name=Gooigi's Cap
 item.princess_peach_crown.name=Princess Peach's Crown
 item.princess_daisy_crown.name=Princess Daisy's Crown
+item.pink_gold_peach_crown.name=Pink Gold Peach's Crown
 item.super_crown.name=Super Crown
 
 item.bandana.name=Bandana
