--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=Wing cap
 item.gooigi_cap.name=Gorra de Gooigi
 item.princess_peach_crown.name=Corona de la Princesa Peach
 item.princess_daisy_crown.name=Corona de la Princesa Daisy
+item.pink_gold_peach_crown.name=Corona de Peach de oro rosa
 item.super_crown.name=Supercorona
 
 item.bandana.name=Pañuelo
