--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -92,6 +92,7 @@ item.wing_cap.name=Casquette ailée
 item.gooigi_cap.name=Casquette de Gooigi
 item.princess_peach_crown.name=Couronne de la Princesse Peach
 item.princess_daisy_crown.name=Couronne de la Princesse Daisy
+item.pink_gold_peach_crown.name=Couronne de Peach d'or rose
 item.super_crown.name=Super couronne
 
 item.bandana.name=Bandana
